--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 // Redifine default variables
-// $primary : #69c826;
+$primary : #515270;
+$secondary : #8d8988;
 
 // Import functions and variables
 @import "../node_modules/bootstrap/scss/functions";
